2005-01-06  Guilhem Lavaux  <guilhem@kaffe.org>

	* tests/internal/Makefile.am: Link jitBasic with libreplace.la

	* tests/internal/Makefile.in: Regenerated.

	Reported by Michael Franz <mvfranz@gmail.com>

2005-01-06  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2004-12-31  Michael Koch  <konqueror@gmx.de>

	* javax/swing/LookAndFeel.java
	(getDesktopPropertyValue): New method.
	
2005-01-06  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2004-12-31  Michael Koch  <konqueror@gmx.de>

	* javax/swing/DefaultListSelectionModel.java
	(fireValueChanged): New method.
	
2005-01-06  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2004-12-31  Michael Koch  <konqueror@gmx.de>

	* javax/swing/JRootPane.java
	(setMenuBar): Added @deprecated tag.
	(getMenuBar): Likewise.
	* javax/swing/JTable.java
	(sizeColumnsToFit): Likewise.
	
2005-01-06  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Added task for extensions override mechanism.

	Reported by:  Davanum Srinivas  <davanum@gmail.com>

2005-01-06  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2004-12-30  Paul Jenner  <psj.home@ntlworld.com>

	* javax/swing/ImageIcon.java (setImage): Implemented.
	
2005-01-06  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2004-12-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/text/DecimalFormatSymbols.java
	New transient currency variable.
	(getCurrency()): uses local variable instead
	(getExponential()): documentation
	(setExponential(char)): documentation
	(getInternationalCurrencySymbol()): documentation fix
	(setInternationalCurrencySymbol(String)): sets currency
	* java/text/NumberFormat.java
	(getCurrencyInstance(java.util.Locale)): sets fraction digits
	from the currency after creation of the format.

2005-01-06  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2004-12-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/util/Locale.java